--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LeanCanvasPrototype</title>
+    <title>LEAN CAMP</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -45,15 +45,8 @@
     -->
     <%= yield %>
     <footer class='p-footer'>
-      <nav class='p-footer__nav'>
-        <ul>
-          <li class='p-footer__nav-item'>
-            <%= link_to 'playground', playground_lean_canvas_path, { :class => 'p-footer__nav-anchor'} %>
-          </li>
-        </ul>
-      </nav>
       <div class='p-copyright'>
-        <small class='p-copyright__text'>© lean canvas prototype</small>
+        <small class='p-copyright__text'>© LEAN CAMP</small>
       </div>
     <footer>
     <%= javascript_include_tag 'index' %>
