--- a/app/views/layouts/mypage.html.erb
+++ b/app/views/layouts/mypage.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LeanCanvasPrototype</title>
+    <title>LEAN CAMP</title>
     <base href='/mypage'>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
