--- a/front/scss/Object/Project/copyright.scss
+++ b/front/scss/Object/Project/copyright.scss
@@ -1,9 +1,9 @@
 .p-copyright {
   width: 100%;
   text-align: center;
-  padding: 40px 0 80px;
+  padding: 10px;
 
   &__text {
-    color: #fff;
+    font-weight: bold;
   }
 }
