--- a/front/scss/Object/Project/footer.scss
+++ b/front/scss/Object/Project/footer.scss
@@ -1,6 +1,7 @@
 .p-footer {
   position: relative;
-  background-color: #273444;
+  background-color: #c5c5c5;
+  margin-top: 80px;
   z-index: 1;
 
   &__nav {
