--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -41,7 +41,7 @@
         またビジネスモデルの転換や移行のきっかけとしても有用です。
       </p>
       <div class='p-top-content__caption'>
-        <%= image_tag('lcp', :class => 'u-width--full') %>
+        <%= image_tag('lcp.png', :class => 'u-width--full') %>
       </div>
       <div class='p-top-content__btn'>
         <%= link_to 'Try Playground', playground_lean_canvas_path, { :class => 'c-btn--primary c-btn--large'} %>
