add project delete and update

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class='p-mainvisual__artwork'>
-        <%= image_tag('lean-canvas-image.png', :class => 'u-width--full') %>
+        <%= image_tag('lean-camp-mainvisual.png', :class => 'u-width--full') %>
       </div>
     </div>
   </div>
