--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,48 @@
 <main class='l-main-devise'>
   <div class='p-form-devise'>
-    <div class='p-form-devise__heading'>
-      <h2 class='c-heading--border'>SIGN UP</h2>
+    <div class='p-form-devise__description'>
+      <h1>アカウントを作成する事で以下の事ができるようになります。</h1>
+      <ul>
+        <li>LEAN CAMPの提供するフレームワークを無制限で使用できます。</li>
+        <li>作成したフレームワークは保存する事ができます。</li>
+        <li>作成したフレームワークをシェアする事ができます。</li>
+      </ul>
+      <%= image_tag('lean-camp-mainvisual.png', :class => 'u-width--full') %>
     </div>
-
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-
-      <div class='c-form p-form-devise__item'>
-        <%= f.label :username, class: 'c-form__label' %>
-        <%= f.text_field :username, autofocus: true, class: 'c-form__input' %>
+    <div class='p-form-devise__card p-form-devise__card--sign-in'>
+      <div class='p-form-devise__heading'>
+        <h2 class='c-heading--border'>SIGN UP</h2>
       </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-      <div class='c-form p-form-devise__item'>
-        <%= f.label :email, class: 'c-form__label' %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'c-form__input' %>
-      </div>
+        <div class='p-form-devise__forms'>
+          <div class='p-form-devise__item'>
+            <%= f.label :username, class: 'p-form-devise__label' %>
+            <%= f.text_field :username, autofocus: true, class: 'p-form-devise__input' %>
+          </div>
 
-      <div class='c-form p-form-devise__item'>
-        <%= f.label :password, class: 'c-form__label' %>
-        <%= f.password_field :password, autocomplete: "off", class: 'c-form__input' %>
-      </div>
+          <div class='p-form-devise__item'>
+            <%= f.label :email, class: 'p-form-devise__label' %>
+            <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'p-form-devise__input' %>
+          </div>
 
-      <div class='c-form p-form-devise__item'>
-        <%= f.label :password, class: 'c-form__label' %>
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'c-form__input' %>
-      </div>
+          <div class='p-form-devise__item'>
+            <%= f.label :password, class: 'p-form-devise__label' %>
+            <%= f.password_field :password, autocomplete: "off", class: 'p-form-devise__input' %>
+          </div>
 
-      <div class='p-form-devise__submit'>
-        <%= f.submit 'SIGN UP', class: 'c-btn--primary c-btn--large' %>
-      </div>
-    <% end %>
+          <div class='p-form-devise__item'>
+            <label class='p-form-devise__label' for='user_password'>Password（確認用）</label>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'p-form-devise__input' %>
+          </div>
+        </div>
+
+        <div class='p-form-devise__submit'>
+          <%= f.submit 'SIGN UP', class: 'c-btn--primary c-btn--large' %>
+        </div>
+      <% end %>
+    </div>
+    <%= render "devise/shared/links" %>
   </div>
 </main>
-
-<%#= render "devise/shared/links" %>
