--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,5 +49,6 @@
       </div>
     <footer>
     <%= javascript_include_tag 'index' %>
+    <%= javascript_include_tag 'particle' %>
   </body>
 </html>
