--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
+<main class='l-main-devise l-container'>
+  <div class='p-form-devise'>
+    <div class=' l-container'>
+      <div class='p-form-devise__card p-form-devise__card--admin'>
+        <div class='p-form-devise__heading'>
+          <h2 class='c-heading--border'>パスワードを再発行する</h2>
+        </div>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+          <div class='p-form-devise__forms'>
+            <div class='p-form-devise__item'>
+              <%= f.label :email, class: 'p-form-devise__label' %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'p-form-devise__input' %>
+            </div>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class='p-form-devise__submit'>
+            <%= f.submit 'パスワード再設定の手続きに進む', class: 'c-btn--primary c-btn--large' %>
+          </div>
+        <% end %>
+        <div class='p-form-devise__link'>
+          アカウントを新規作成しますか？ <%= link_to "SIGN UP", new_user_registration_path %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</main>
