--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
       </h1>
       <nav class='p-header__nav'>
         <% if user_signed_in? %>
-          <%= link_to current_user.username, mypage_path, { :class => "class_1"} %>
+          <%= link_to current_user.username, mypage_path, { :class => "p-header__anchor"} %>
           <%= link_to 'プロフィール変更', edit_user_registration_path %>
-          <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, :class => 'p-header__signout' %>
+          <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, :class => 'p-header__anchor' %>
         <% else %>
-          <%= link_to 'SIGN IN', new_user_session_path, { :class => 'p-header__signin'} %>
+          <%= link_to 'SIGN IN', new_user_session_path, { :class => 'p-header__anchor'} %>
           <%= link_to 'SIGN UP', new_user_registration_path, { :class => 'p-header__signup'} %>
         <% end %>
       </nav>
