--- a/front/scss/Object/Project/form.scss
+++ b/front/scss/Object/Project/form.scss
@@ -25,7 +25,25 @@
     }
 
     ul {
+      padding: 24px 36px;
+      background-color: #fefeff;
+      list-style: none;
 
+      li {
+        margin-bottom: 1.2em;
+        vertical-align: baseline;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        &::before {
+          @include icon-font('\e084');
+          font-size: 20px;
+          color: rgb(238, 238, 24);
+          margin-right: 8px;
+        }
+      }
     }
   }
   
