--- a/front/scss/Object/Project/form.scss
+++ b/front/scss/Object/Project/form.scss
@@ -94,7 +94,9 @@
   &__checkbox {
     margin: -12px auto 36px;
     text-align: center;
-  }
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    }
 
   &__submit {
     text-align: center;
