--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1942,8 +1942,15 @@ input[type="checkbox"] {
     font-weight: bold;
     font-family: 'Quicksand', sans-serif; }
 
+.p-document {
+  position: relative;
+  margin-top: 120px;
+  margin-bottom: 120px;
+  padding: 36px 60px;
+  background-color: #fff; }
+
 .p-footer {
-  background-color: rgba(251, 251, 251, 0.96);
+  background-color: rgba(251, 251, 251, 0.5);
   padding: 48px 3vw 12px;
   border-top: 1px #ccc solid; }
   .p-footer__main {
@@ -1998,12 +2005,6 @@ input[type="checkbox"] {
         vertical-align: baseline; }
         .p-form-devise__description ul li:last-child {
           margin-bottom: 0; }
-        .p-form-devise__description ul li::before {
-          font-family: 'Icons';
-          content: "";
-          font-size: 20px;
-          color: #eeee18;
-          margin-right: 8px; }
   .p-form-devise__card {
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 6px -2px;
@@ -2107,17 +2108,8 @@ input[type="checkbox"] {
       color: #fff;
       background-color: #2a85d7; }
 
-.p-main__canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0; }
-
 .p-main-top {
   margin-top: 40px;
-  background-color: #fff;
   z-index: 1; }
 
 .p-mainvisual {
@@ -2173,7 +2165,7 @@ input[type="checkbox"] {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 0; }
+  z-index: -1; }
 
 .p-toastify--success {
   background-color: #14c078 !important; }
