--- a/front/scss/Object/Project/form.scss
+++ b/front/scss/Object/Project/form.scss
@@ -37,12 +37,12 @@
           margin-bottom: 0;
         }
 
-        &::before {
-          @include icon-font('\e084');
-          font-size: 20px;
-          color: rgb(238, 238, 24);
-          margin-right: 8px;
-        }
+        // &::before {
+        //   @include icon-font('\e153');
+        //   font-size: 20px;
+        //   color: rgb(238, 238, 24);
+        //   margin-right: 8px;
+        // }
       }
     }
   }
