--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1397,6 +1397,45 @@ input[type="checkbox"] {
   letter-spacing: .1em;
   cursor: pointer; }
 
+.c-customer-journey-map {
+  border-radius: 4px; }
+  .c-customer-journey-map th {
+    padding: 10px;
+    font-size: 1vw; }
+  .c-customer-journey-map td {
+    max-width: 420px;
+    min-width: 240px;
+    border: 4px solid #fff;
+    padding: 10px; }
+  .c-customer-journey-map tr td:nth-child(1n) {
+    background-color: rgba(38, 163, 255, 0.15); }
+  .c-customer-journey-map tr td:nth-child(2n) {
+    background-color: rgba(19, 206, 102, 0.15); }
+  .c-customer-journey-map tr td:nth-child(3n) {
+    background-color: rgba(255, 73, 219, 0.15); }
+  .c-customer-journey-map tr td:nth-child(4n) {
+    background-color: rgba(175, 141, 209, 0.15); }
+  .c-customer-journey-map tr td:nth-child(5n) {
+    background-color: rgba(145, 98, 191, 0.15); }
+  .c-customer-journey-map tr td:nth-child(6n) {
+    background-color: rgba(255, 120, 73, 0.15); }
+  .c-customer-journey-map tr td:nth-child(7n) {
+    background-color: rgba(255, 200, 44, 0.15); }
+  .c-customer-journey-map__label {
+    position: relative; }
+    .c-customer-journey-map__label::before {
+      content: '';
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background-color: #434343; }
+  .c-customer-journey-map__textarea {
+    width: 100%;
+    margin-top: 5px;
+    border: 0;
+    outline: 0;
+    resize: none; }
+
 .c-experiment-board {
   display: grid;
   grid-template-rows: max-content;
